--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -22,4 +22,4 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           push: true
-          tags: abdullah7191/python-app:${{ github.sha::6 }}
+          tags: abdullah7191/python-app:${{ github.sha}}
