--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -2,25 +2,32 @@ name: ci
 
 on:
   push:
+    branches: [ main ]
     paths:
       - src/**
       - src/Dockerfile
-    branches:
-      - main
+
 
 jobs:
   docker:
     runs-on: ubuntu-latest
     steps:
-      -
-        name: Login to Docker Hub
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-      -
-        name: Build and push
+          registry: docker.io
+          username: ${{ secrets.DOCKERHUB_USERNAME }}   # e.g. "abdullah7191"
+          password: ${{ secrets.DOCKERHUB_TOKEN }}      # or DOCKERHUB_PASSWORD — must match your secret name
+
+      - name: Build and push
         uses: docker/build-push-action@v6
         with:
+          context: ./src
+          file: ./src/Dockerfile
           push: true
-          tags: abdullah7191/python-app:${{ github.sha }}
+          tags: |
+            abdullah7191/python-app:latest
+            abdullah7191/python-app:${{ github.sha }}
