--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -22,6 +22,10 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}   # e.g. "abdullah7191"
           password: ${{ secrets.DOCKERHUB_TOKEN }}      # or DOCKERHUB_PASSWORD — must match your secret name
 
+      - name: Set short SHA
+        id: vars
+        run: echo "SHORT_SHA=$(echo $GITHUB_SHA | cut -c1-7)" >> $GITHUB_ENV
+
       - name: Build and push
         uses: docker/build-push-action@v6
         with:
@@ -30,4 +34,4 @@ jobs:
           push: true
           tags: |
             abdullah7191/python-app:latest
-            abdullah7191/python-app:${{ github.sha }}
+            abdullah7191/python-app:${{ env.SHORT_SHA }}
